--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <header>
        
-         <nav class=" navbar fixed-bottom navbar-light bg-light" style="background-color: #e3f2fd;">
+         <nav class=" navbar fixed-top  bg-light" style="background-color: #e3f2fd;">
          
             <ul class="nav">
                <li class="nav-item">
