--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                           <h2 style="color: black;" >I am a Full-stack Engineer , Freelancer & <br>
                                              <span> Entrepreneur.</span></h2>  
                                              <ul class="social">
-                                                <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+                                                <li><a href="#" class="icon brands fa-twitter"><span  class="label">Twitter</span></a></li>
                                                 <li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
                                                 <li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
                                                 <!--
@@ -115,19 +115,11 @@
                   </div>
                    <div class="item4"  data-aos="flip-up" id="what"> 
                       <h2>Recent Projects</h2>
-                      <h4>Smart Service Center</h4> 
-
-                       <p> Implemented system to automation
-                         stock management 
-                        order management , employee 
-                        management and revenue analyzing of 
-                        large service center.(javaEE/angular8 ) .</p>
-
-                        <h4>dev.darshana.tech</h4> 
-
-                        <p> Developing  personal blog site
-                           to  share  technical articles  , technical videos and crash courses. 
-                           .(javaEE/angular8 ) .</p>
+                        <div class="projects projectsgrid">
+                           <div class="itemp1">1</div>
+                           <div class="itemp2">2</div>
+                           <div class="itemp3">3</div>
+                        </div>
                       
                      
                    </div>
