--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                           </div>  
                                        </div>     
                                        <div class="text"  data-aos="fade-left" > 
-                                          <h2 style="color: black;" >I am a Full-stack Engineer , Freelancer & <br>
+                                          <h2 style="color: black;" >I am   Full-stack Engineer , Freelancer & <br>
                                              <span> Entrepreneur.</span></h2>  
                                              <ul class="social">
                                                 <li><a href="#" class="icon brands fa-twitter"><span  class="label">Twitter</span></a></li>
