--- a/index.html
+++ b/index.html
@@ -140,12 +140,14 @@
                       <p  style="color: black;">HTML5,CSS3 ,SCSS <br> JS ,TS <br>angular11 ,react</p>
 
                       <h5 >Back-end</h5>
-                      <p style="color: black;" >javaEE <br>   
-                      <p  style="color: black;"> 
-                         hibernate,spring,spring-boot
-                      </p>
-                      <h5  >
-                         DevOps Tools
+                      <p  style="color: black;">
+                        JavaEE<br>
+                        JPA , EJB , Hibernate , JSP<br>
+                        Spring , spring-boot<br>
+                    
+                     </p>
+                        
+                        <h5> DevOps Tools
                       </h5>
                       <p  style="color: black;">
                          docker<br>
