--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                   
                   </div>
                    <div class="item4" id="what"> 
-                      <h2>Current None Commercial  Projects</h2><br>
+                      <h2>Recent None Commercial  Projects</h2><br>
                         <div class="projects projectsgrid">
                            <div class="itemp1"  data-aos="flip-left"   data-aos-delay="50"  >
                               <p> 
