--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js" integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw==" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
        
-        <title>Dev Darshana</title>    
+        <title>Dinuka Ekanayake</title>    
  </head>   
     <body>
       <script>
@@ -85,7 +85,7 @@
                      </div>
                    <div class="item1"  data-aos="fade-down" id="intro">
                   
-                     <h3>I am dinuka darshana</h3>
+                     <h3>I am Dinuka Ekanayake </h3>
                      <p>Hunger full stack developer to learn new standards with a can-do
                         attitude. Passionate about code and addicted to opensource.I have over 3
                         years of experience as a Full-stack developer, and have worked at both
@@ -236,7 +236,7 @@
           </main> 
           <footer>
             <div class="footer">
-               <p>&#169; Dinuka Darshana 	</p>
+               <p>&#169; Dinuka Ekanayake 	</p>
              </div>
          </footer>     
    </body>   
